--- a/index.html
+++ b/index.html
@@ -10,11 +10,11 @@
     <meta property="og:title" content="FoodSave - Спасайте еду от выбрасывания в Узбекистане" />
     <meta property="og:description" content="Первое приложение в Узбекистане для борьбы с пищевыми отходами. Покупайте качественную еду со скидкой до 70% от кафе, ресторанов и магазинов." />
     <meta property="og:type" content="website" />
-    <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <meta property="og:image" content="https://foodsave.uz/og-image.jpg" />
 
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:site" content="@foodsave_uz" />
-    <meta name="twitter:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <meta name="twitter:image" content="https://foodsave.uz/og-image.jpg" />
   </head>
 
   <body>
