--- a/index.html
+++ b/index.html
@@ -3,18 +3,24 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-<title>FoodSave - Спасайте еду от выбрасывания в Узбекистане</title>
+    <link rel="icon" type="image/x-icon" href="/favicon.ico">
+    <link rel="apple-touch-icon" href="/icon1.webp">
+    <title>FoodSave - Спасайте еду от выбрасывания в Узбекистане</title>
     <meta name="description" content="Первое приложение в Узбекистане для борьбы с пищевыми отходами. Покупайте качественную еду со скидкой до 70% от кафе, ресторанов и магазинов." />
     <meta name="author" content="FoodSave" />
 
     <meta property="og:title" content="FoodSave - Спасайте еду от выбрасывания в Узбекистане" />
     <meta property="og:description" content="Первое приложение в Узбекистане для борьбы с пищевыми отходами. Покупайте качественную еду со скидкой до 70% от кафе, ресторанов и магазинов." />
     <meta property="og:type" content="website" />
-    <meta property="og:image" content="https://foodsave.uz/og-image.jpg" />
+    <meta property="og:image" content="/icon1.webp" />
+    <meta property="og:image:width" content="512" />
+    <meta property="og:image:height" content="512" />
+    <meta property="og:image:alt" content="FoodSave Logo" />
 
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:site" content="@foodsave_uz" />
-    <meta name="twitter:image" content="https://foodsave.uz/og-image.jpg" />
+    <meta name="twitter:image" content="/icon1.webp" />
+    <meta name="twitter:image:alt" content="FoodSave Logo" />
   </head>
 
   <body>
