--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="icon" type="image/x-icon" href="/favicon.ico">
+    <link rel="icon" type="image/png" href="/src/assets/logo-modified.png">
     <link rel="apple-touch-icon" href="/icon1.webp">
     <title>FoodSave - Спасайте еду от выбрасывания в Узбекистане</title>
     <meta name="description" content="Первое приложение в Узбекистане для борьбы с пищевыми отходами. Покупайте качественную еду со скидкой до 70% от кафе, ресторанов и магазинов." />
