--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="icon" type="image/png" href="/src/assets/logo-modified.png">
-    <link rel="apple-touch-icon" href="/src/assets/logo-modified.png">
+    <link rel="icon" type="image/png" href="/logo-modified.png">
+    <link rel="apple-touch-icon" href="/logo-modified.png">
     <title>FoodSave - Спасайте еду от выбрасывания в Узбекистане</title>
     <meta name="description" content="Первое приложение в Узбекистане для борьбы с пищевыми отходами. Покупайте качественную еду со скидкой до 70% от кафе, ресторанов и магазинов." />
     <meta name="author" content="FoodSave" />
@@ -12,14 +12,14 @@
     <meta property="og:title" content="FoodSave - Спасайте еду от выбрасывания в Узбекистане" />
     <meta property="og:description" content="Первое приложение в Узбекистане для борьбы с пищевыми отходами. Покупайте качественную еду со скидкой до 70% от кафе, ресторанов и магазинов." />
     <meta property="og:type" content="website" />
-    <meta property="og:image" content="/src/assets/logo-modified.png" />
+    <meta property="og:image" content="/logo-modified.png" />
     <meta property="og:image:width" content="512" />
     <meta property="og:image:height" content="512" />
     <meta property="og:image:alt" content="FoodSave Logo" />
 
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:site" content="@foodsave_uz" />
-    <meta name="twitter:image" content="/src/assets/logo-modified.png" />
+    <meta name="twitter:image" content="/logo-modified.png" />
     <meta name="twitter:image:alt" content="FoodSave Logo" />
   </head>
 
